--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,19 +1,24 @@
-FROM python:3.11-slim
+FROM pytorch/pytorch:2.1.0-cuda11.8-cudnn8-runtime
 
 # Set working directory
 WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
+# Copy requirements (without torch since it's already in base image)
 COPY requirements.txt .
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install remaining dependencies (torch already present)
+RUN pip install --no-cache-dir \
+    fastapi==0.109.0 \
+    uvicorn[standard]==0.27.0 \
+    pydantic==2.5.3 \
+    transformers==4.36.2 \
+    qdrant-client==1.7.0 \
+    python-multipart==0.0.6
 
 # Copy application code
 COPY api.py .
