--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.115.0
-uvicorn==0.32.0
-torch>=2.6.0
-transformers>=4.46.0
-qdrant-client>=1.12.0
-pydantic>=2.10.0
-numpy>=1.26.0
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.3
+torch==2.1.2+cpu
+transformers==4.36.2
+qdrant-client==1.7.0
+python-multipart==0.0.6
+--extra-index-url https://download.pytorch.org/whl/cpu
